syntax = "proto3";

message NewEvalMessage {
	uint64 id = 1;
	string function = 2;
	repeated string args = 3;
	// Timeout in ms
	uint32 timeout = 4;
	// Create active eval message.
	// Allows for dynamic communication for an eval
	bool active = 5;
}

message EvalEventMessage {
	uint64 id = 1;
	string event = 2;
	repeated string args = 3;
}

message EvalFailedMessage {
	uint64 id = 1;
	string response = 2;
}

message EvalDoneMessage {
	uint64 id = 1;
	string response = 2;
}

message Ping {}

message Pong {}
